# fontdb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: find-system-font.rs
src/: lib.rs
tests/: add_fonts.rs  query.rs
