[package]
name = "fontdb"
version = "0.10.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
edition = "2018"
description = "A simple, in-memory font database with CSS-like queries."
documentation = "https://docs.rs/fontdb/"
readme = "README.md"
repository = "https://github.com/RazrFalcon/fontdb"
license = "MIT"
keywords = ["font", "db", "css", "truetype", "ttf"]
categories = ["text-processing"]

[dependencies]
log = "0.4"
memmap2 = { version = "0.5", optional = true }

[dependencies.ttf-parser]
version = "0.17"
default-features = false
features = ["opentype-layout", "apple-layout", "variable-fonts", "glyph-names"]

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies]
fontconfig-parser = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
env_logger = { version = "0.9", default-features = false }

[features]
default = ["fs", "memmap", "std"]
fontconfig = ["fontconfig-parser", "fs"]
fs = ["std"] # allows local filesystem interactions
memmap = ["fs", "memmap2"] # allows font files memory mapping, greatly improves performance
std = ["ttf-parser/std"]
